# unified-rag

./: .gitignore  Cargo.toml  FIXES_APPLIED.md  FIX_SUMMARY.md  README.md  test_connection.sh  test_interactive.sh  test_mcp.sh  test_mcp_proper.sh
docs/: redis-cache-migration-guide.md  redis-l1-cache-specification.md
src/: error.rs  main.rs  service.rs
src/cache/: mod.rs  redis_cache.rs
src/config/: mod.rs
src/models/: mod.rs
src/search/: embeddings.rs  mod.rs  qdrant_search.rs
src/tools/: mod.rs
